// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AdminUserEdit rendering tests all values -  test 1`] = `
<div>
  <div
    class="container mx-auto max-w-7xl px-4 py-8"
    data-testid="admin-user-edit"
  >
    <div
      class="mb-8"
    >
      <h1
        class="mb-2 text-3xl font-bold text-slate-900"
      >
        User 1
      </h1>
      <p
        class="text-slate-600"
      >
        user1@example.com
      </p>
    </div>
    <div
      class="space-y-6"
    >
      <div
        class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm"
        data-slot="card"
      >
        <div
          class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6"
          data-slot="card-header"
        >
          <div
            class="leading-none font-semibold"
            data-slot="card-title"
          >
            Nutzerinformationen
          </div>
        </div>
        <div
          class="px-6 grid grid-cols-1 gap-4 sm:grid-cols-2"
          data-slot="card-content"
        >
          <div>
            <p
              class="text-sm font-medium text-muted-foreground"
            >
              ID
            </p>
            <p
              class="font-mono text-sm"
            >
              user-id-1
            </p>
          </div>
          <div>
            <p
              class="text-sm font-medium text-muted-foreground"
            >
              Name
            </p>
            <p
              class="text-sm"
            >
              User 1
            </p>
          </div>
          <div>
            <p
              class="text-sm font-medium text-muted-foreground"
            >
              E-Mail
            </p>
            <p
              class="text-sm"
            >
              user1@example.com
            </p>
          </div>
          <div>
            <p
              class="text-sm font-medium text-muted-foreground"
            >
              E-Mail verifiziert
            </p>
            <p
              class="text-sm"
            >
              <span
                class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-primary text-primary-foreground [a&]:hover:bg-primary/90"
                data-slot="badge"
              >
                Ja — 
                01.01.2025
              </span>
            </p>
          </div>
          <div>
            <p
              class="text-sm font-medium text-muted-foreground"
            >
              Stripe Customer ID
            </p>
            <p
              class="font-mono text-sm"
            >
              —
            </p>
          </div>
          <div>
            <p
              class="text-sm font-medium text-muted-foreground"
            >
              Trial endet am
            </p>
            <p
              class="text-sm"
            >
              15.01.2025
            </p>
          </div>
          <div>
            <p
              class="text-sm font-medium text-muted-foreground"
            >
              Erstellt
            </p>
            <p
              class="text-sm"
            >
              01.01.2025, 01:00
            </p>
          </div>
          <div>
            <p
              class="text-sm font-medium text-muted-foreground"
            >
              Aktualisiert
            </p>
            <p
              class="text-sm"
            >
              01.01.2025, 01:00
            </p>
          </div>
        </div>
      </div>
      <div
        class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm"
        data-slot="card"
      >
        <div
          class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6"
          data-slot="card-header"
        >
          <div
            class="leading-none font-semibold"
            data-slot="card-title"
          >
            Rolle verwalten
          </div>
        </div>
        <div
          class="px-6"
          data-slot="card-content"
        >
          <div
            class="flex items-center gap-4"
          >
            <div>
              <p
                class="mb-1 text-sm font-medium text-muted-foreground"
              >
                Aktuelle Rolle
              </p>
              <span
                class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90"
                data-slot="badge"
              >
                user
              </span>
            </div>
            <div>
              <p
                class="mb-1 text-sm font-medium text-muted-foreground"
              >
                Rolle ändern
              </p>
              <form
                class="flex items-end gap-3"
                data-testid="user-role-form"
              >
                <div
                  class="grid gap-2"
                  data-slot="form-item"
                  data-testid="role"
                >
                  <label
                    class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive"
                    data-error="false"
                    data-slot="form-label"
                    for="_r_0_-form-item"
                  >
                    Rolle
                  </label>
                  <div
                    class="relative"
                  >
                    <button
                      aria-autocomplete="none"
                      aria-controls="radix-_r_1_"
                      aria-expanded="false"
                      class="border-input data-[placeholder]:text-muted-foreground [&_svg:not([class*='text-'])]:text-muted-foreground focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 dark:hover:bg-input/50 flex items-center justify-between gap-2 rounded-md border bg-transparent px-3 py-2 text-sm whitespace-nowrap shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 data-[size=default]:h-9 data-[size=sm]:h-8 *:data-[slot=select-value]:line-clamp-1 *:data-[slot=select-value]:flex *:data-[slot=select-value]:items-center *:data-[slot=select-value]:gap-2 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 w-full"
                      data-size="default"
                      data-slot="select-trigger"
                      data-state="closed"
                      data-testid="role-trigger"
                      dir="ltr"
                      role="combobox"
                      type="button"
                    >
                      <span
                        data-slot="select-value"
                        style="pointer-events: none;"
                      >
                        user
                      </span>
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-chevron-down size-4 opacity-50"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m6 9 6 6 6-6"
                        />
                      </svg>
                    </button>
                    <div
                      data-testid="mock-react-portal"
                    />
                    <select
                      aria-hidden="true"
                      name="role"
                      style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
                      tabindex="-1"
                    >
                      <option
                        selected=""
                        value="user"
                      >
                        user
                      </option>
                      <option
                        value="admin"
                      >
                        admin
                      </option>
                    </select>
                  </div>
                </div>
                <button
                  class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5"
                  data-slot="button"
                  type="submit"
                >
                  Speichern
                </button>
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AdminUserEdit rendering tests values null - test 1`] = `
<div>
  <div
    class="container mx-auto max-w-7xl px-4 py-8"
    data-testid="admin-user-edit"
  >
    <div
      class="mb-8"
    >
      <h1
        class="mb-2 text-3xl font-bold text-slate-900"
      >
        User 1
      </h1>
      <p
        class="text-slate-600"
      >
        user1@example.com
      </p>
    </div>
    <div
      class="space-y-6"
    >
      <div
        class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm"
        data-slot="card"
      >
        <div
          class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6"
          data-slot="card-header"
        >
          <div
            class="leading-none font-semibold"
            data-slot="card-title"
          >
            Nutzerinformationen
          </div>
        </div>
        <div
          class="px-6 grid grid-cols-1 gap-4 sm:grid-cols-2"
          data-slot="card-content"
        >
          <div>
            <p
              class="text-sm font-medium text-muted-foreground"
            >
              ID
            </p>
            <p
              class="font-mono text-sm"
            >
              user-id-1
            </p>
          </div>
          <div>
            <p
              class="text-sm font-medium text-muted-foreground"
            >
              Name
            </p>
            <p
              class="text-sm"
            >
              User 1
            </p>
          </div>
          <div>
            <p
              class="text-sm font-medium text-muted-foreground"
            >
              E-Mail
            </p>
            <p
              class="text-sm"
            >
              user1@example.com
            </p>
          </div>
          <div>
            <p
              class="text-sm font-medium text-muted-foreground"
            >
              E-Mail verifiziert
            </p>
            <p
              class="text-sm"
            >
              <span
                class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-destructive text-white [a&]:hover:bg-destructive/90 focus-visible:ring-destructive/20 dark:focus-visible:ring-destructive/40 dark:bg-destructive/60"
                data-slot="badge"
              >
                Nein
              </span>
            </p>
          </div>
          <div>
            <p
              class="text-sm font-medium text-muted-foreground"
            >
              Stripe Customer ID
            </p>
            <p
              class="font-mono text-sm"
            >
              —
            </p>
          </div>
          <div>
            <p
              class="text-sm font-medium text-muted-foreground"
            >
              Trial endet am
            </p>
            <p
              class="text-sm"
            >
              —
            </p>
          </div>
          <div>
            <p
              class="text-sm font-medium text-muted-foreground"
            >
              Erstellt
            </p>
            <p
              class="text-sm"
            >
              01.01.2025, 01:00
            </p>
          </div>
          <div>
            <p
              class="text-sm font-medium text-muted-foreground"
            >
              Aktualisiert
            </p>
            <p
              class="text-sm"
            >
              01.01.2025, 01:00
            </p>
          </div>
        </div>
      </div>
      <div
        class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm"
        data-slot="card"
      >
        <div
          class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6"
          data-slot="card-header"
        >
          <div
            class="leading-none font-semibold"
            data-slot="card-title"
          >
            Rolle verwalten
          </div>
        </div>
        <div
          class="px-6"
          data-slot="card-content"
        >
          <div
            class="flex items-center gap-4"
          >
            <div>
              <p
                class="mb-1 text-sm font-medium text-muted-foreground"
              >
                Aktuelle Rolle
              </p>
              <span
                class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-primary text-primary-foreground [a&]:hover:bg-primary/90"
                data-slot="badge"
              >
                admin
              </span>
            </div>
            <div>
              <p
                class="mb-1 text-sm font-medium text-muted-foreground"
              >
                Rolle ändern
              </p>
              <form
                class="flex items-end gap-3"
                data-testid="user-role-form"
              >
                <div
                  class="grid gap-2"
                  data-slot="form-item"
                  data-testid="role"
                >
                  <label
                    class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive"
                    data-error="false"
                    data-slot="form-label"
                    for="_r_5_-form-item"
                  >
                    Rolle
                  </label>
                  <div
                    class="relative"
                  >
                    <button
                      aria-autocomplete="none"
                      aria-controls="radix-_r_6_"
                      aria-expanded="false"
                      class="border-input data-[placeholder]:text-muted-foreground [&_svg:not([class*='text-'])]:text-muted-foreground focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 dark:hover:bg-input/50 flex items-center justify-between gap-2 rounded-md border bg-transparent px-3 py-2 text-sm whitespace-nowrap shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 data-[size=default]:h-9 data-[size=sm]:h-8 *:data-[slot=select-value]:line-clamp-1 *:data-[slot=select-value]:flex *:data-[slot=select-value]:items-center *:data-[slot=select-value]:gap-2 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 w-full"
                      data-size="default"
                      data-slot="select-trigger"
                      data-state="closed"
                      data-testid="role-trigger"
                      dir="ltr"
                      role="combobox"
                      type="button"
                    >
                      <span
                        data-slot="select-value"
                        style="pointer-events: none;"
                      >
                        admin
                      </span>
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-chevron-down size-4 opacity-50"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m6 9 6 6 6-6"
                        />
                      </svg>
                    </button>
                    <div
                      data-testid="mock-react-portal"
                    />
                    <select
                      aria-hidden="true"
                      name="role"
                      style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
                      tabindex="-1"
                    >
                      <option
                        value="user"
                      >
                        user
                      </option>
                      <option
                        selected=""
                        value="admin"
                      >
                        admin
                      </option>
                    </select>
                  </div>
                </div>
                <button
                  class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5"
                  data-slot="button"
                  type="submit"
                >
                  Speichern
                </button>
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
